# spev-tts

./: .gitignore  GUID.md  LICENSE  MANIFEST.in  PRODUCTION_SYSTEM_SUMMARY.md  QUICKSTART.ps1  QUICKSTART.sh  README.md  advanced__download_dataset.py  download_datasets.py  generate_clean_requirements.py  pyproject.toml  requirements.txt  requirements_conda.txt  setup.py  spev_advanced.py  spev_real_metrics.py  spev_temporal_policy.py  spev_tts.py
